# tabattn

./: .gitignore  README.md  autoloop.py  bench_e2e.py  capture_trace.py  e2e_analysis.py  e2e_results.json  ledger.jsonl  modal_app.py  plot_profile.py  plot_steps.py  plot_traces.py  plots.py  pod_bench.py  pod_worker.py  profile_sweep.json  profile_tabpfn.py  pyproject.toml  referee.py  results_h100.csv  results_h100.json  steps.json
bench/: __init__.py  backends.py  config.py  report.py  runner.py
